--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <meta charset="utf-8">
 <body>
 <h1>チーム名「ｼｬﾊﾞﾃﾞｩﾀｯﾁﾍﾝｼｰﾝ」</h1>
-<a href = "./selfproduce.txt">加藤さん・じゃむじゃむさん</a>
+<a href = "./yoshiyuki.html">加藤さん</a>
 <br>
 <a href = "./nikezono.html">中園</a>
 <br>
