インデックスの変更

--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
 <br>
 <a href = "./nikezono.html">中園</a>
 <br>
-<a href = "./dyosukeb.txt">ヨスケさん</a>
+<a href = "./dyosukeb.html">ヨスケさん</a>
+<br>
+<a href = "./jamjam.html">ｼﾞｬﾑｼﾞｬﾑ</a>
 </body>
 
 
