--- a/nikezono.html
+++ b/nikezono.html
@@ -1,15 +1,22 @@
-<html class="no-js">
+<!DOCTYPE HTML>
+<html>
 <head>
   <title>nikezono</title>
   <meta charset = "utf-8">
+
+  <!BOOTSTRAP>
+  <link rel = stylesheet href = "http://bootswatch.com/readable/bootstrap.min.css" type="text/css">
+  <script type = "text/javascript" href = "https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
+  <script type = "text/javascript" href = "bootstrap.js"></script>
+ 
 </head>
 
 <body>
 
   <h1>nikezono</h1>
   <ul>
-    <li><h1>名前：中園翔</li>
-    <li>環境情報学部３年</h1></li>
+    <li><h3>名前：中園翔</h3></li>
+    <li><h4>環境情報学部３年</h4></li>
     <ul><h3>持っているスキル</h3>
       <li>Ruby,Python,Java,Javascriptが少し書ける</li>
       <li><a href="http://nikezono.net">nikezono.net</a>に今までやったことを書くつもりだったがあまり書いていない</li>
