自己紹介もうこれで書き終わりで・・・

--- a/jamjam.html
+++ b/jamjam.html
@@ -5,11 +5,29 @@
 	<head>
 		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 		<link href="jamjam.css" rel="stylesheet" type="text/css" />
-		<title>今期の時間割</title>
+		
+		<title>自己紹介的なもの</title>
 	</head>
 	
 	<body>
 		<div id="wrapper">
+		
+			<li>名前</li>
+			　<h1>s10097ju</h1>
+			<br>
+			<li>所属</li>
+			　<h1><s>環境</s>総合政策学部3年　萩野服部研所属</h1>
+			<br>
+			<li>書ける言語</li>
+			　<h1>Java</h1>
+			<br>
+			<li>やったことのある言語</li>
+			　<h1>Javascript（忘れた）</h1>
+			<br>
+			<li>今期の目標</li>
+			　<h1>とりあえず単位とって就活にも目星つけたいです・・・。</h1>
+			<br>
+			<li>時間割</li>
 			<table class=tab1>
 				<tr>
 					<td></td> <td align="center">[　　　　月　　　　]</td> <td align="center">[　　　　火　　　　]</td> <td align="center">[　　　　水　　　　]</td> <td align="center">[　　　　木　　　　]</td> <td align="center">[　　　　金　　　　]</td>
@@ -30,6 +48,20 @@
 					<td><h4>5</h4></td> <td ></td> <td></td> <td></td> <td>電池社会</td> <td align="center">協創型ソフトウェア</td>
 				</tr>
 			</table>
+			<br>
+			<ul>
+			<li>作業可能な時間帯</li>
+			　　月曜：なにも予定がなければだいたい大丈夫<br>
+			　　火曜：放課後が大丈夫<br>
+			　　水曜：なにも予定がなければだいたい大丈夫<br>
+			　　木曜：3限の間ぐらい<br>
+			　　金曜：3限の間ぐらい。放課後もなんとか。<br>
+			　　土曜：何も予定がなければ大丈夫<br>
+			　　日曜：何も予定がなければ大丈夫<br><br>
+			　　ただの暇人にしか見えませんねこれ<br>
+			</ul>
+			<ul>
+			<br>
 		</div>
 	</doby>
 </html>
